--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,21 +2,13 @@ body{
     position:relative;
 }
 
-.cover-image{
-    background-image:url('../images/banner3.jpg');
-    background-size: cover;
-    background-position: center center;
-    width:100%;
-    height:100vh;
-    display: inline-block;
-}
 
 
 nav{
-    position: fixed;
+    position: absolute;
     width:100%;
     background-color: transparent !important;
-    top:0px;
+    top:10px;
 }
 
 
@@ -25,6 +17,7 @@ nav{
 .uk-navbar-nav>li.uk-active>a {
     background-color: transparent;
     color:white;
+    border-bottom:2px solid #FFE0A7;
 }
 
 .uk-navbar-nav>li>a{
@@ -33,7 +26,9 @@ nav{
 }
 /**/
 
-
+.banner-slider{
+    position: relative;
+}
 
 .banner-logo{
     max-width: 200px;
@@ -42,4 +37,91 @@ nav{
     left:0px;
     right:0px; 
     margin:auto;
+}
+
+.uk-navbar{
+    z-index: 100000;
+}
+
+address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
+    margin:0px;
+}
+
+.uk-dotnav{
+    padding:10px !important;
+}
+
+.uk-navbar-nav{
+    background-color: rgba(0,0,0,0.4);
+}
+
+.services{
+    text-align: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    background: url('../images/banner-dk.jpg');
+    background-size: cover;
+    background-position: center center;
+    padding:30px;
+}
+
+.services h4{
+    color:#FFE0A7;
+    margin:0px;
+}
+
+.services ul{
+    padding-left: 0px;
+    margin-left: -32px;
+    padding: 5px;
+}
+
+.services li{
+    display: inline-block;
+    color:white;
+    padding:20px;
+    font-weight: 200;
+
+}
+
+.uk-navbar img{
+    width:150px;
+}
+
+.overlay-inside-content h1{
+    font-size: 30px;
+}
+
+.services li i{
+    color:rgb(0, 0, 0);
+    background-color: #FFE0A7;
+    border-radius: 100%;
+    width:15px;
+    padding:2px;
+    margin-right: 5px;
+}
+
+.clearfix{
+    clear:both;
+}
+
+.uk-dotnav>*>*{
+    width:10px;
+    height:10px;
+}
+
+.container{
+    text-align: center;
+    color:black;
+}
+
+.about-us{
+    padding:20px;
+}
+
+.about-us h2{
+    color:black;
+    font-weight: bolder;
 }
