--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,8 +108,8 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 }
 
 .uk-dotnav>*>*{
-    width:10px;
-    height:10px;
+    width:10px !important;
+    height:10px !important;
 }
 
 .container{
