new fucked up design

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,28 @@ body{
     position:relative;
 }
 
+@font-face {
+    font-family: GothamBook;
+    src: url(Gotham-Book.otf);
+}
+
+@font-face {
+    font-family: PriorSan;
+    src: url(Gotham-Bold.otf);
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: PriorSan;
+    src: url(Gotham-Light.otf);
+    font-weight: lighter;
+}
+
+h1, h2, h3, h4, h5, h6, html{
+    font-family: PriorSan;
+    color:black;
+}
+
 
 
 nav{
@@ -48,7 +70,9 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 }
 
 .uk-dotnav{
-    padding:10px !important;
+    z-index: 1000;
+    position:absolute !important;
+    top:64%;
 }
 
 .uk-navbar-nav{
@@ -58,31 +82,31 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 .services{
     text-align: center;
     position: absolute;
-    top: 0px;
+    bottom: 0vh;
     left: 0px;
     right: 0px;
-    background: url('../images/banner-dk.jpg');
+    /*background: url('../images/banner-dk.jpg');*/
     background-size: cover;
     background-position: center center;
-    padding:30px;
 }
 
 .services h4{
     color:#FFE0A7;
     margin:0px;
+    font-size: 2.2vw;   
 }
 
 .services ul{
     padding-left: 0px;
     margin-left: -32px;
-    padding: 5px;
 }
 
 .services li{
     display: inline-block;
     color:white;
-    padding:20px;
+    padding:1.1vw;
     font-weight: 200;
+    font-size: 2vw;
 
 }
 
@@ -98,7 +122,6 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
     color:rgb(0, 0, 0);
     background-color: #FFE0A7;
     border-radius: 100%;
-    width:15px;
     padding:2px;
     margin-right: 5px;
 }
@@ -110,6 +133,7 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 .uk-dotnav>*>*{
     width:10px !important;
     height:10px !important;
+
 }
 
 .container{
@@ -124,4 +148,77 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 .about-us h2{
     color:black;
     font-weight: bolder;
+}
+
+.myheight{
+    height:100px;
+}
+
+
+.myheight, .myheight>li{
+    height:100% !important;
+    min-height: 100vh;
+}
+/*.uk-position-cover{
+    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 84%, 50% 100%, 0 84%, 0 0);
+    clip-path: polygon(0% 0%, 100% 0, 100% 84%, 50% 100%, 0 84%, 0 0);
+}
+
+.uk-overlay-background{
+    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 84%, 50% 100%, 0 84%, 0 0);
+    clip-path: polygon(0% 0%, 100% 0, 100% 84%, 50% 100%, 0 84%, 0 0);
+    box-shadow: 3px -5px 17px 2px rgba(0, 0, 0, 0.18);
+
+}*/
+
+.uk-slideshow{
+    position:absolute !important;
+    top:0px;
+    left:0px;
+    width:100%;
+}
+
+.uk-slidenav-position{
+    position:relative;
+    min-height: 100vh;
+}
+
+.uk-overlay-background{
+    background: transparent !important;
+}
+
+
+.another{
+    position:absolute;
+    bottom:23px;
+    width:100%;
+    z-index: 100;
+    opacity: 1 !important;
+}
+
+.uk-slideshow>.uk-active{
+    position:relative;
+}
+
+.container{
+    position: relative;
+}
+
+.overlay-inside-content{
+    margin-top: 5%;
+}
+
+.overlay-inside-content p{
+    font-style: italic;
+    font-weight: lighter;
+    max-width:610px;
+}
+
+.overlay-inside-content h1{
+    font-weight: bolder;
+    margin-bottom:0px;
+}
+
+.overlay-inside-content.blue p, .overlay-inside-content.blue h1{
+    color:#1e2534;
 }
