--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -412,6 +412,7 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
     width:100%;
     padding-left: 0px;
     padding-right: 0px;
+    padding-bottom: 0px;
   }
 
   .background-round{
