--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,7 +76,7 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 .banner-slider .uk-dotnav{
     z-index: 1000;
     position:absolute !important;
-    top:64%;
+    top:95%;
 }
 
 .uk-navbar-nav{
@@ -119,7 +119,7 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 }
 
 .overlay-inside-content h1{
-    font-size: 30px;
+    font-size: 44px;
 }
 
 .services li i{
@@ -143,6 +143,7 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 .container{
     text-align: center;
     color:black;
+    font-size: 12px;
 }
 
 
@@ -207,13 +208,15 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 
 .banner-slider .overlay-inside-content p{
     font-style: italic;
-    font-weight: lighter;
     max-width:610px;
+    font-size: 21px;
+    text-shadow: 2px 2px black;
 }
 
 .banner-slider .overlay-inside-content h1{
     font-weight: bolder;
     margin-bottom:0px;
+    text-shadow: 2px 2px black;
 }
 
 .banner-slider .overlay-inside-content.blue p, .overlay-inside-content.blue h1{
@@ -221,31 +224,36 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 }
 
 .about-us .heading-block{
-    background-color: #05192e;
+    background-color: white;
     color:white;
     padding:30px;
 }
 
 .about-us .heading-block h1{
-    color:white;
+    color:#05192e;
     font-weight: 800;
     margin:0px;
 }
 
 .about-us .left-block{
     width:50%;
-    padding:20px;
+    padding:4%;
     display: inline-block;
     vertical-align: top;
     font-style: italic;
     position: relative;
+    max-width: 490px;
+    padding:10px;
+    padding-right: 40px;
 }
 
 .about-us .right-block{
     width:50%;
     display: inline-block;
     vertical-align: top;
-    padding:20px;
+    padding:10px;
+    padding-left: 40px;
+    max-width: 550px;
 }
 
 .about-us p{
@@ -255,27 +263,30 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 .heading.button-style{
     background-color: #ab9364;
     display: inline-block;
-    padding: 4px 20PX;
+    padding: 1px 20PX;
+    padding-top: 2px;
     color:white;
     border-radius: 8px;
     font-style: normal;
-    font-size: 20px;
+    font-size: 16px;
     box-shadow: 1px 3px 3px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 0px;
 }
 
 .about-us .left-block .left-content{
     display: inline-block;
-    width:50%;
+    width:44%;
     vertical-align: top;
     padding:10px;
-    border-right:2px solid black;
+    border-right:3px solid black;
 }
 
 .about-us .left-block .right-content{
     display: inline-block;
-    width:50%;
+    width:56%;
     vertical-align: top;
     padding:10px;
+    text-align: left;
 }
 
 .about-us .left-block .left-content ul{
@@ -293,7 +304,6 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
     top:50%;
     margin-top: -45%;
     left:0px;
-    padding:50px;
     z-index:-1;
 }
 
@@ -360,6 +370,10 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
     padding: 0px;
 }
 
+.contact-table{
+    background-color: white;
+}
+
 .contact-table .right-side{
     display: inline-block;
     width:50%;
@@ -402,39 +416,247 @@ address, blockquote, dl, fieldset, figure, ol, p, pre, ul{
 }
 
 
+#whoIsKeyAviation .header{
+    text-align: right;
+    height:200px;
+    background-image: url('../images/about-us1.jpeg');
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+#whoIsKeyAviation .header h1{
+    display: inline-block;
+    font-size: 22px;
+    font-weight: bolder;
+    border-left:2px solid white;
+    padding-right: 20px;
+    color:white;
+    padding-left: 10px;
+    z-index: 100000;
+    position: absolute;
+    top:0px;
+    right:0px;
+    font-style: italic;
+}
+
+#whoIsKeyAviation .overlay{
+    background-color: rgba(0,0,0,0.5);
+    width:100%;
+    height:100%;
+}
+
+#whoIsKeyAviation .main-content .div1{
+    display: inline-block;
+    vertical-align: top;
+    width:50%;
+    background-image: url('../images/about-us2.jpg');
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+#whoIsKeyAviation .main-content p{
+    padding:20px;
+}
+
+#whoIsKeyAviation .main-content .div1 p{
+    position: absolute;
+    right:0px;
+    top:0px;
+    padding:20px 10px;
+    width:250px;
+}
+
+#whoIsKeyAviation .main-content .div1 img{
+    position: absolute;
+    right:0px;
+    top:0px;
+}
+
+#whoIsKeyAviation .main-content .div2{
+    display: inline-block;
+    vertical-align: top;
+    width:25%;
+}
+
+#whoIsKeyAviation .main-content .div3{
+    display: inline-block;
+    vertical-align: top;
+    width:25%;
+}
+
+#whoIsKeyAviation .main-content{
+    padding:0px 7%;
+    background-color: #162324;
+    color:#ffffff;
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex;  
+}
+
+.uk-modal-dialog{
+    padding:0px;
+}
+
+.yellow{
+    color:#dddb00;
+    font-weight: bolder;
+}
+
 
 @media (max-width: 800px) {
-  .about-us .left-block {
-    width:100%;
-  }
+    .about-us .left-block {
+        width:100%;
+    }
 
-  .about-us .right-block{
-    width:100%;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 0px;
-  }
+    .about-us .right-block{
+        width:100%;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-bottom: 0px;
+    }
 
-  .background-round{
-    margin-top: -52%;
-  }
+    .background-round{
+        margin-top: -52%;
+    }
 
-  .investors .left-block{
-    width:100%;
-  }
+    .investors .left-block{
+        width:100%;
+    }
 
-  .investors .right-block{
-    width:100%;
-    padding-top:0px;
-  }
+    .investors .right-block{
+        width:100%;
+        padding-top:0px;
+    }
 
-  .contact-table .left-side{
-    width:100%;
+    .contact-table .left-side{
+        width:100%;
+        border:none;
+        border-bottom:1px solid #ab9364;
+    }
+
+    .contact-table .right-side{
+        width:100%;
+    }
+
+    #whoIsKeyAviation .main-content .div1{
+        width:100%;
+   }
+
+    #whoIsKeyAviation .main-content .div2{
+        width:100%;
+    }
+
+    #whoIsKeyAviation .main-content .div3{
+        width:100%;
+    }
+
+    #whoIsKeyAviation .main-content{
+        display: block;
+    }
+
+    #whoIsKeyAviation .main-content .div1 p{
+        display: inline-block;
+        position: initial;
+        width:100%;
+    }
+
+    #whoIsKeyAviation .main-content .div1{
+        background-image: none;
+    }
+
+    #whoIsKeyAviation .main-content .div1 img{
+        display: none;
+    }
+
+    .services-block .content .blocks{
+        margin-right:0px !important;
+    }
+}
+
+p{
+    font-size: 12px;
+}
+
+.uk-modal-dialog>.uk-close:first-child{
+    margin: -21px -21px 0px 0px;
+    color:white;
+}
+
+.buttons{
+    margin-top: 40px;
+}
+
+.buttons .values{
+    display: inline-block;
+    vertical-align: top;
+    padding:14px;
+    margin-bottom: 15px;
     border:none;
-    border-bottom:1px solid #ab9364;
-  }
+    color:white;
+}
 
-  .contact-table .right-side{
+.services-block .heading-block{
+    padding:30px;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    z-index: 100;
+}
+
+.services-block .heading-block h1{
+    font-weight: bolder;
+    color: #ffe3a4;
+    text-shadow: 2px 2px black;
+}
+
+.services-block .heading-block .overlay{
     width:100%;
-  }
+    height:142px;
+    position:absolute;
+    left:0px;
+    top:0px;
+    z-index: -1;
+}
+
+.services-block .heading-block .overlay div{
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,0.5);
+    position: relative;
+    z-index: 100;
+}
+
+.services-block .content{
+    background-color: #162324;
+    padding: 40px 5% 40px 5%;
+}
+
+.services-block .content .blocks{
+    display: inline-block;
+    vertical-align: top;
+    width:400px;
+    background-color: #2a373c;
+    color:#ffffff;
+    text-align: left;
+    padding:20px;
+    margin-bottom: 30px;
+}
+
+.services-block .content h4{
+    color:#dddb00;
+    font-weight: bolder;
+    font-style: italic;
+}
+
+footer{
+    padding:10px;
+}
+
+.uk-navbar-nav>li{
+    display: inline-block;
+    float:none;
 }
