--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -716,7 +716,8 @@ i.fa-linkedin{
     text-align: left;
      -webkit-justify-content: center; /* Safari 6.1+ */
     justify-content: center;
-    align-items: center;    
+    align-items: center;
+    -webkit-align-items: center; /* Safari 7.0+ */ 
     padding-top: 40px;
     padding-bottom: 40px;
     position: relative;
